--- a/frontend/src/Global.scss
+++ b/frontend/src/Global.scss
@@ -13,27 +13,27 @@ $card-color: #1D8A86;
 
 @font-face {
   src: url('./fonts/NeueMontreal-Bold.ttf');
-  font-family: NeueBold;
+  font-family: 'NeueBold';
 }
 
 @font-face {
   src: url('./fonts/NeueMontreal-Medium.ttf');
-  font-family: NeueMedium;
+  font-family: 'NeueMedium';
 }
 
 @font-face {
   src: url('./fonts/NeueMontreal-Regular.ttf');
-  font-family: NeueRegular;
+  font-family: 'NeueRegular';
 }
 
 @font-face {
   src: url('./fonts/Comic_Sans_MS.ttf');
-  font-family: ComicSansBold;
+  font-family: 'ComicSansBold';
 }
 
 @font-face {
   src: url('./fonts/Comic_Sans_MS.ttf');
-  font-family: ComicSansRegular;
+  font-family: 'ComicSansRegular';
 }
 
 @mixin button {
